# mesh-splitting

./: Cargo.toml  README.md  flake.nix
benches/: water_tank.rs  water_tank_instructions.rs
src/: collide.rs  export.rs  idx_triangle.rs  lib.rs  main.rs  mesh.rs  primitives.rs  save.rs  segment.rs  split.rs  triangle.rs
